--- a/src/index.html
+++ b/src/index.html
@@ -6,106 +6,142 @@
     <title>Bootstrap</title>
 </head>
 <body>
-    <header class="top-container">
-        <nav class="navbar navbar-expand-lg px-5 position-fixed mb-2">
-            <a class="navbar-brand" href="#"><img src="./img/bmw_white_logo.svg" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+<header class="top-container">
+    <nav class="navbar navbar-expand-lg px-5 position-fixed mb-2">
+        <a class="navbar-brand" href="#"><img src="./img/bmw_white_logo.svg" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+            <div class="navbar-nav">
+                <a class="nav-link text-white" href="#">Modèles</a>
+                <a class="nav-link text-white" href="#">Gamme électrique</a>
+                <a class="nav-link text-white" href="#">Configurer</a>
+                <a class="nav-link text-white">Acheter</a>
+            </div>
+        </div>
+    </nav>
+    <div class="content d-flex flex-column justify-content-end align-content-start h-75 row">
+        <h1 class="text-white mb-5 mx-5 col-10 col-md-6">Lorem ipsum dolor sit amet, consedolor sit amet, conse
+        </h1>
+        <a href="" class="btn btn-light border-0 text-white py-2 mx-5 col-8 col-md-3">Découvrir nos véhicules</a>
+    </div>
+</header>
+<section class="mid-container w-100">
+    <div class="container-fluid w-100 p-0">
+        <div class="w-100">
+            <div class="title text-center my-4">
+                <h2>Trouvez votre BMW</h2>
+            </div>
+            <div class="d-none d-md-flex slider w-100 justify-content-between">
+                <div class="slider-item h-100 slider-1 d-flex flex-column justify-content-between align-content-start">
+                    <h3 class="m-3 text-white">BMW Neuves</h3>
+                    <a href="" class="btn btn-light w-50 m-3">Modèles Disponible</a>
+                </div>
+                <div class="slider-item h-100 slider-2 d-flex flex-column justify-content-between align-content-start">
+                    <h3 class="m-3 text-white">BMW d'Occasion</h3>
+                    <a href="" class="btn btn-light w-50 m-3">Modèles Disponible</a>
+                </div>
+                <div class="slider-item h-100 slider-3 d-flex flex-column justify-content-between align-content-start">
+                    <h3 class="m-3 text-white">Personnalisez vôtre BMW</h3>
+                    <a href="" class="btn btn-light w-50 m-3">Configuration & Prix</a>
+                </div>
+            </div>
+            <div class="d-block slider d-md-none d-flex flex-column justify-content-center align-content-center">
+                <div class="h-100 slider-1 d-flex flex-column justify-content-between align-content-start">
+                    <h3 class="m-3 text-white">BMW Neuves</h3>
+                    <a href="" class="btn btn-light w-50 m-3">Modèles Disponible</a>
+                </div>
+                <div class="h-100 slider-2 d-flex flex-column justify-content-between align-content-start">
+                    <h3 class="m-3 text-white">BMW d'Occasion</h3>
+                    <a href="" class="btn btn-light w-50 m-3">Modèles Disponible</a>
+                </div>
+                <div class="h-100 slider-3 d-flex flex-column justify-content-between align-content-start">
+                    <h3 class="m-3 text-white">Personnalisez vôtre BMW</h3>
+                    <a href="" class="btn btn-light w-50 m-3">Configuration & Prix</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container d-flex flex-column justify-content-center w-100">
+        <div class="title text-center my-4">
+            <h2>Découvrez notre gamme électrique</h2>
+        </div>
+        <div id="carouselDark" class="carousel carousel-dark slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="./img/i4.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="./img/i5.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/iX3.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                <div class="navbar-nav">
-                    <a class="nav-link text-white" href="#">Modèles</a>
-                    <a class="nav-link text-white" href="#">Gamme électrique</a>
-                    <a class="nav-link text-white" href="#">Configurer</a>
-                    <a class="nav-link text-white">Acheter</a>
-                </div>
-            </div>
-        </nav>
-        <div class="content d-flex flex-column justify-content-end align-content-start h-75">
-            <h1 class="text-white mb-5 mx-5 w-50">Lorem ipsum dolor sit amet, consedolor sit amet, conse
-            </h1>
-            <a href="" class="btn btn-light border-0 text-white py-2 mx-5 w-25">Découvrir nos véhicules</a>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-    </header>
-    <section class="mid-container w-100">
-        <div class="container-fluid w-100 p-0">
-            <div class="w-100">
-                <div class="title text-center my-4">
-                    <h2>Trouvez votre BMW</h2>
+        <div class="description row my-4">
+            <div class="categorie col-6 col-md-3 text-center mb-2">
+                <div class="title border-bottom border-black h-50 pb-md-4 mb-md-4 pb-2 mb-2">
+                    <p class="fs-6 ">LOYER SANS APPORT :</p>
                 </div>
-                <div class="slider w-100 d-flex justify-content-between">
-                    <div class="slider-item h-100 slider-1 d-flex flex-column justify-content-between align-content-start">
-                        <h3 class="m-3 text-white">BMW Neuves</h3>
-                        <a href="" class="btn btn-light w-50 m-3">Modèles Disponible</a>
-                    </div>
-                    <div class="slider-item h-100 slider-2 d-flex flex-column justify-content-between align-content-start">
-                        <h3 class="m-3 text-white">BMW d'Occasion</h3>
-                        <a href="" class="btn btn-light w-50 m-3">Modèles Disponible</a>
-                    </div>
-                    <div class="slider-item h-100 slider-3 d-flex flex-column justify-content-between align-content-start">
-                        <h3 class="m-3 text-white">Personnalisez vôtre BMW</h3>
-                        <a href="" class="btn btn-light w-50 m-3">Configuration & Prix</a>
-                    </div>
+                <div class="content h-50">
+                    <p>590€/Mois(3) Finition M Sport</p>
                 </div>
             </div>
-        </div>
-        <div class="container d-flex flex-column justify-content-center w-100">
-            <div class="title text-center my-4">
-                <h2>Découvrez notre gamme électrique</h2>
+            <div class="categorie col-6 col-md-3 text-center mb-2">
+                <div class="title border-bottom border-black h-50 pb-md-4 pb-2 mb-4">
+                    <p class="fs-6 ">RECHARGE ION IONITY ILLIMITÉE :</p>
+                </div>
+                <div class="content h-50">
+                    <p>1 an offert</p>
+                </div>
             </div>
-            <div id="carouselDark" class="carousel carousel-dark slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <div class="categorie col-6 col-md-3 text-center mb-2">
+                <div class="title border-bottom border-black h-50 pb-md-4 mb-md-4 pb-2 mb-2">
+                    <p class="fs-6 ">AUTONOMIE (WLTP) JUSQU'À :</p>
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./img/bmw-i5-3.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./img/bmw-i5-2.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/bmw-i5.png" class="d-block w-100" alt="...">
-                    </div>
+                <div class="content h-50">
+                    <p>589 Km(6)</p>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselDark" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselDark" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
-            <div class="description row">
-                <div class="categorie col-3">
-                    <div class="title border-bottom border-black h-50"><p class="fs-6 ">LOYER SANS APPORT :</p></div>
-                    <div class="content h-50"></div>
+            <div class="categorie col-6 col-md-3 text-center mb-2">
+                <div class="title border-bottom border-black h-50 pb-md-4 mb-md-4 pb-2 mb-2">
+                    <p class="fs-6 ">RECHARGE RAPIDE :</p>
                 </div>
-                <div class="categorie col-3">
-                    <div class="title border-bottom border-black h-50"><p class="fs-6 ">RECHARGE ION IONITY ILLIMITÉE :</p></div>
-                    <div class="content h-50"></div>
-                </div>
-                <div class="categorie col-3">
-                    <div class="title border-bottom border-black h-50"><p class="fs-6 ">AUTONOMIE (WLTP) JUSQU'À :</p></div>
-                    <div class="content h-50"></div>
-                </div>
-                <div class="categorie col-3">
-                    <div class="title border-bottom border-black h-50"><p class="fs-6 ">RECHARGE RAPIDE :</p></div>
-                    <div class="content h-50"></div>
+                <div class="content h-50">
+                    <p>4 Min pour 100Km</p>
                 </div>
             </div>
         </div>
-        <div>
-            <div class="title text-center my-4">
-                <span>THE NEW</span>
-                <h2>BMW Vision Neue Klasse</h2>
-            </div>
+        <div class="w-100 d-flex justify-content-center row">
+            <a class="btn btn-secondary text-dark border-0 col-6 col-md-3">Découvrir le véhicule</a>
         </div>
-    </section>
-    
-    <script type="module" src="./js/main.js"></script>
+    </div>
+    <div class="bottom-container d-flex flex-column justify-content-between mt-5 row">
+        <div class="title p-5 col-8 col-md-5">
+            <span class="fs-5 text-white-50">THE NEW</span>
+            <h2 class="fs-1 text-white my-2">BMW Vision Neue Klasse</h2>
+        </div>
+        <div class="m-5 row">
+            <a href="" class="btn btn-outline-light border-3 text-white py-2 col-8 col-md-3">Découvrir nos véhicules</a>
+        </div>
+    </div>
+</section>
+
+<script type="module" src="./js/main.js"></script>
 </body>
 </html>
